@@ -8,6 +8,8 @@ Background:
     using System.Collections.Generic;
     using System.Text;
     using System.Threading.Tasks;
+    using System.Diagnostics.CodeAnalysis;
+    using System.Runtime.InteropServices;
     namespace Methods;
     public class MethodHolder
     {
@@ -385,4 +387,27 @@ Scenario: Forward Obsolete attribute
     /// <inheritdoc/>
     [global::System.ObsoleteAttribute("Obsolete method")]
     public void ObsoleteMethod() => Methods.MethodHolder.ObsoleteMethod();
+    """
+
+
+Scenario: Forward parameters attributes
+  Given source member declaration
+    """
+    public static bool TryParse([NotNullWhen(true)] string? s, [MaybeNullWhen(false), Out][AllowNull] out int result)
+    {
+      result = 0;
+      return false;
+    }
+    """
+  When run generator
+  Then there must not be generation exception
+  And generated interface member must be
+    """
+    /// <inheritdoc cref = "Methods.MethodHolder.TryParse(global::System.String? , out global::System.Int32)"/>
+    global::System.Boolean TryParse([global::System.Diagnostics.CodeAnalysis.NotNullWhenAttribute(true)] global::System.String? s, [global::System.Diagnostics.CodeAnalysis.MaybeNullWhenAttribute(false)][global::System.Runtime.InteropServices.OutAttribute][global::System.Diagnostics.CodeAnalysis.AllowNullAttribute] out global::System.Int32 result);
+    """
+  And generated implementation member must be
+    """
+    /// <inheritdoc/>
+    public global::System.Boolean TryParse([global::System.Diagnostics.CodeAnalysis.NotNullWhenAttribute(true)] global::System.String? s, [global::System.Diagnostics.CodeAnalysis.MaybeNullWhenAttribute(false)][global::System.Runtime.InteropServices.OutAttribute][global::System.Diagnostics.CodeAnalysis.AllowNullAttribute] out global::System.Int32 result) => Methods.MethodHolder.TryParse(s, out result);
     """
